--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
     "morgan": "^1.7.0",
-    "object-assign":"4.1.0"
+    "object-assign": "4.1.0"
   },
   "engine": {
     "node": "*",
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "start": "node server.js",
+    "build": "webpack",
     "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js"
   },
   "repository": {
@@ -30,5 +31,8 @@
   "bugs": {
     "url": "http://github.com/openshift/nodejs-ex/issues"
   },
-  "homepage": "http://github.com/openshift/nodejs-ex"
+  "homepage": "http://github.com/openshift/nodejs-ex",
+  "devDependencies": {
+    "webpack": "^2.6.1"
+  }
 }
