--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
     "morgan": "^1.7.0",
-    "object-assign": "4.1.0"
+    "object-assign": "4.1.0",
+    "peer": "^0.2.8",
+    "socket.io": "^2.0.2"
   },
   "engine": {
     "node": "*",
@@ -33,6 +35,7 @@
   },
   "homepage": "http://github.com/openshift/nodejs-ex",
   "devDependencies": {
+    "chai": "^3.5.0",
     "webpack": "^2.6.1"
   }
 }
