--- a/package.json
+++ b/package.json
@@ -4,23 +4,31 @@
   "description": "Node.js sample app for OpenShift 3",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
+    "mongoose": "^4.10.5",
     "morgan": "^1.7.0",
     "object-assign": "4.1.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "peer": "^0.2.8",
-    "socket.io": "^2.0.2"
+    "socket.io": "^2.0.2",
+    "webpack": "^2.6.1"
   },
   "engine": {
     "node": "*",
     "npm": "*"
   },
   "scripts": {
+    "prestart": "npm run build",
     "start": "node server.js",
+    "local": "set MONGO_URL=mongodb://127.0.0.1:27017/data&&npm start",
     "build": "webpack",
     "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js"
   },
@@ -35,7 +43,6 @@
   },
   "homepage": "http://github.com/openshift/nodejs-ex",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "webpack": "^2.6.1"
+    "chai": "^3.5.0"
   }
 }
