--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "body-parser": "^1.17.2",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.15.3",
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
     "mongoose": "^4.10.5",
