Minor refactoring, changed readme and package.json.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejs-ex",
+  "name": "network-server",
   "version": "0.0.1",
-  "description": "Node.js sample app for OpenShift 3",
+  "description": "A strategic multiplayer space combat game.",
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.17.2",
@@ -37,14 +37,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/openshift/nodejs-ex.git"
+    "url": "https://github.com/JerryZhu99/network-server.git"
   },
-  "author": "Steve Speicher <sspeiche@gmail.com>",
-  "license": "CC-BY-1.0",
-  "bugs": {
-    "url": "http://github.com/openshift/nodejs-ex/issues"
-  },
-  "homepage": "http://github.com/openshift/nodejs-ex",
+  "author": "Jerry Zhu",
+  "homepage": "https://github.com/JerryZhu99/network-server",
   "devDependencies": {
     "chai": "^3.5.0",
     "cross-env": "^5.0.1"
